(fix) messages at exceptions fixed, lazy persistence fixed (add) integration tests student teacher admin